; ModuleID = '/home/carl/AnghaBench/git/extr_http-backend.c_send_strbuf.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-backend.c_send_strbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }

@content_length = common dso_local global i32 0, align 4
@content_type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*, %struct.strbuf*)* @send_strbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_strbuf(%struct.strbuf* %0, i8* %1, %struct.strbuf* %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.strbuf*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.strbuf* %2, %struct.strbuf** %6, align 8
  %7 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %8 = load i32, i32* @content_length, align 4
  %9 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %10 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @hdr_int(%struct.strbuf* %7, i32 %8, i32 %11)
  %13 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %14 = load i32, i32* @content_type, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @hdr_str(%struct.strbuf* %13, i32 %14, i8* %15)
  %17 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %18 = call i32 @end_headers(%struct.strbuf* %17)
  %19 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %20 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @write_or_die(i32 1, i32 %21, i32 %24)
  ret void
}

declare dso_local i32 @hdr_int(%struct.strbuf*, i32, i32) #1

declare dso_local i32 @hdr_str(%struct.strbuf*, i32, i8*) #1

declare dso_local i32 @end_headers(%struct.strbuf*) #1

declare dso_local i32 @write_or_die(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
